src/test/ui/did_you_mean/issue-36798_unknown_field.stderr
error: no field `zz` on type `Foo`
  --> $DIR/issue-36798_unknown_field.rs:17:7
   |
17 |     f.zz;
   |       ^^ unknown field

error: aborting due to previous error

